# depictio-models

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yaml
depictio_models/: logging.py  s3_utils.py  test_utils.py  utils.py
depictio_models/models/: base.py  cli.py  dashboards.py  data_collections.py  deltatables.py  files.py  jbrowse.py  projects.py  s3.py  test_base.py  users.py  workflows.py
depictio_models/models/data_collections_types/: jbrowse.py  table.py
tests/: test_base.py  test_users.py  test_utils.py
