[project]
name = "depictio-models"
version = "0.3.0"  # You can update this dynamically later if needed
description = "Shared models for depictio-cli and depictio deployment"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = []

[tool.uv]
# Development dependencies
dev-dependencies = [
  "pre-commit",
  "ruff",
  "pytest",
  "mypy"
]

[tool.ruff]
line-length = 100
ignore = ["E501"]

[tool.mypy]
install_types = true


